--- a/ref/Muon_TDR.tex
+++ b/ref/Muon_TDR.tex
@@ -1,6 +1,4 @@
 \bibitem{Muon_TDR}
-
-\bibitem{MFT_TDR}
 %\bibitem{CERN-LHCC-2015-001}
-"LICE dimuon forward spectrometer: addendum to the
+"ALICE dimuon forward spectrometer: addendum to the
 Technical Design Report" CERN-LHCC-2000-046,Technical design report. ALICE, 2000. Available at https://cds.cern.ch/record/494265
