--- a/5_Acknowledgements.tex
+++ b/5_Acknowledgements.tex
@@ -1,13 +1,22 @@
+\newpage
 \section{Acknowledgements}
 I want to thank everyone involved in this study.
-First of all, Dr. Shigaki, thank you very much for not only your daily guidance but also for giving me various opportunities to present my research and to learn at research meetings and academic conferences. Those experiences helped me gain basic knowledge of the ALICE experiment and of heavy ion collision experiments as a whole.
-Dr. Yamaguchi. Thank you very much for all your comments on the plots during the analysis process, especially at the meeting. Thanks to your help, I developed my ability to think logically and proceed with my research, even though it is still in its infancy.
-Dr. Yano, thank you very much for your opinions on muon analysis. I learned the importance of thinking about the analysis necessary for current muon analysis and planning for the future.
-Dr. Homma, Dr. Miyoshi, thank you very much for your questions and suggestions in the weekly lab meetings, business trip reports, midterm presentations, and so on. Through your questions and suggestions, I learned about your attitude toward research.
-Mr. Oya, thank you very much for teaching me the method of forward muon pair analysis from scratch. Your wide-ranging opinions, from consultation on research policy to debugging the analysis code, helped me advance my research. As a senior student with the highest grade in the laboratory, I have had many occasions to learn from you.
-Mr. Kimura, thank you very much for consulting with me on many aspects of my research policy. Your knowledge of the theory of lepton pair measurement has greatly advanced my understanding of this research.
+
+First of all, Prof. Kenta Shigaki, thank you very much for not only your daily guidance but also for giving me various opportunities to present my research and to learn at research meetings and academic conferences. Those experiences helped me gain basic knowledge of the ALICE experiment and of heavy ion collision experiments as a whole.
+
+Prof. Yorito Yamaguchi. Thank you very much for all your comments on the plots during the analysis process, especially at the meeting. Thanks to your help, I developed my ability to think logically and proceed with my research, even though it is still in its infancy.
+
+Prof. Satoshi Yano, thank you very much for your opinions on muon analysis. I learned the importance of thinking about the analysis necessary for current muon analysis and planning for the future.
+
+Prof. Keisuke Homma, Prof. Miyoshi, thank you very much for your questions and suggestions in the weekly lab meetings, business trip reports, midterm presentations, and so on. Through your questions and suggestions, I learned about your attitude toward research.
+
+Mr. Motomi Oya, thank you very much for teaching me the method of forward muon pair analysis from scratch. Your wide-ranging opinions, from consultation on research policy to debugging the analysis code, helped me advance my research. As a senior student with the highest grade in the laboratory, I have had many occasions to learn from you.
+
+Mr. Kento Kimura, thank you very much for consulting with me on many aspects of my research policy. Your knowledge of the theory of lepton pair measurement has greatly advanced my understanding of this research.
+
 To everyone in the laboratory: Thank you for your daily involvement, from opinions about the contents of this research to refreshing chats.
-Bator, Maurice, Sarah, and Steffer for their appropriate comments during my presentations at the MFT meeting and the DQtoMuMu PAG meeting. These comments helped me understand what was missing in my analysis and what I needed to think about.
 
 To the ALICE experimental group.
-This study was analyzed using data acquired by the ALICE experimental group. Once again, I would like to express my gratitude.
+This study was analyzed using data acquired by the ALICE collaboration. Once again, I would like to express my gratitude.
+
+Dr, Sarah, Dr. Batoul, Dr. Maurice and Dr. Luca for their appropriate comments during my presentations at the MFT meeting and the DQtomumu PAG meeting. These comments helped me understand what was missing in my analysis and what I needed to think about.
