--- a/ref/QCD_PhaseDiagram.tex
+++ b/ref/QCD_PhaseDiagram.tex
@@ -1,3 +1,10 @@
 \bibitem{QCDPhaseDiagram}
 %\bibitem{Maire:2025215}
-A. Maire, "Phase diagram of QCD matter: Quark-Gluon Plasma," 2015. Available at: https://cds.cern.ch/record/2025215
+A. Maire, Phase diagram of QCD matter: Quark-Gluon Plasma, 2015. Available at: https://cds.cern.ch/record/2025215
+%@unpublished{Maire:2025215,
+%      author        = "Maire, Antonin",
+%      title         = "{Phase diagram of QCD matter : Quark-Gluon Plasma}",
+%      year          = "2015",
+%      url           = "https://cds.cern.ch/record/2025215",
+%      note          = "General Photo",
+%}
