--- a/ref/ALICERun2Dilepton.tex
+++ b/ref/ALICERun2Dilepton.tex
@@ -1,6 +1,7 @@
 %\cite{ALICE:2023jef}
 \bibitem{ALICE:2023jef}
-S.~Acharya\textit{et al.} [ALICE],
+%S.~Acharya\textit{et al.} [ALICE],
 %``Dielectron production in central Pb$-$Pb collisions at $\sqrt{s_\mathrm{NN}}$ = 5.02 TeV,''
-[arXiv:2308.16704 [nucl-ex]].
+%[arXiv:2308.16704 [nucl-ex]].
 %15 citations counted in INSPIRE as of 17 Jan 2025
+S. Acharya et al. [ALICE Collaboration], Eur. Phys. J. C 84, 813 (2024) doi:10.1140/epjc/s10052-024-12935-y
