--- a/ref/dilepton_measurement.tex
+++ b/ref/dilepton_measurement.tex
@@ -1,8 +1,10 @@
 %\cite{Geurts:2022xmk}
 \bibitem{Geurts:2022xmk}
-F.~Geurts and R.~A.~Tripolt,
+%F.~Geurts and R.~A.~Tripolt,
 %``Electromagnetic probes: Theory and experiment,''
-Prog. Part. Nucl. Phys. \textbf{128}, 104004 (2023)
-doi:10.1016/j.ppnp.2022.104004
-[arXiv:2210.01622 [hep-ph]].
+%Prog. Part. Nucl. Phys. \textbf{128}, 104004 (2023)
+%doi:10.1016/j.ppnp.2022.104004
+%[arXiv:2210.01622 [hep-ph]].
 %25 citations counted in INSPIRE as of 17 Jan 2025
+
+F. Geurts and R. A. Tripolt, Prog. Part. Nucl. Phys. 128, 104004 (2023) doi:10.1016/j.ppnp.2022.104004
